--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 alt="zoom on 2 palms holding a book that speaks of changing the way you think"
                 class="cards__image"
               />
-              <p class="cards__title">Two Ways of Thinking</p>
+              <h3 class="cards__title">Two Ways of Thinking</h3>
               <p class="cards__description">
                 Deep understanding comes from being able to toggle back and forth
                 between focused and diffused thinking.
@@ -85,7 +85,7 @@
                 alt="roman statue"
                 class="cards__image"
               >
-              <p class="cards__title">Recall</p>
+              <h3 class="cards__title">Recall</h3>
               <p class="cards__description">
                 Improving your ability to remember key bits of information helps
                 to connect different parts of the brain.
@@ -97,7 +97,7 @@
                 alt="a dome of some kind with people in it"
                 class="cards__image"
               />
-              <p class="cards__title">Interleaving</p>
+              <h3 class="cards__title">Interleaving</h3>
               <p class="cards__description">
                 When you learn multiple skills at the same time, they reinforce
                 each other.
@@ -109,7 +109,7 @@
                 alt="the inside of a peculiar architechtural structure"
                 class="cards__image"
               />
-              <p class="cards__title">Questions</p>
+              <h3 class="cards__title">Questions</h3>
               <p class="cards__description">
                 When listening to your teacher, think up a good question,
                 something that you're really itching to know.
@@ -121,7 +121,7 @@
                 alt="hand holding books"
                 class="cards__image"
               />
-              <p class="cards__title">Illusion of Competence</p>
+              <h3 class="cards__title">Illusion of Competence</h3>
               <p class="cards__description">
                 Test yourself, write it down, tell other people, and repeat the
                 process in different settings. Only then can you be truly certain
@@ -188,13 +188,13 @@
           <p class="section-subtitle">On learning and the brain</p>
           <ul class="table">
             <li class="table__cell">
-              <p class="table__heading">86 billion</p>
+              <h3 class="table__heading">86 billion</h3>
               <p class="table__text">
                 The number of neurons in the human brain
               </p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">73%</p>
+              <h3 class="table__heading">73%</h3>
               <p class="table__text">
                 The percentage of adults in the US who consider themselves
                 lifelong learners
@@ -202,20 +202,20 @@
               <p class="table__text">Pew Research Center</p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">1,000 terabytes</p>
+              <h3 class="table__heading">1,000 terabytes</h3>
               <p class="table__text">
                 The information storage capacity of a human
               </p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">500 trillion</p>
+              <h3 class="table__heading">500 trillion</h3>
               <p class="table__text">
                 The number of nerve synapses responsible for learning in the
                 average adult human
               </p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">420 million</p>
+              <h3 class="table__heading">420 million</h3>
               <p class="table__text">
                 The number of adults under 25 with insufficient education for
                 finding employment
@@ -223,18 +223,18 @@
               <p class="table__text">World Bank, 2017</p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">26 years old</p>
+              <h3 class="table__heading">26 years old</h3>
               <p class="table__text">
                 The age at which Albert Einstein published his groundbreaking
                 paper on special relativity
               </p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">1885</p>
+              <h3 class="table__heading">1885</h3>
               <p class="table__text">Development of the forgetting curve</p>
             </li>
             <li class="table__cell">
-              <p class="table__heading">1897</p>
+              <h3 class="table__heading">1897</h3>
               <p class="table__text">
                 Publication of Ivan Pavlov's research on classical conditioning
               </p>
@@ -243,8 +243,8 @@
         </section>
         <section class="khan">
           <article class="khan__container">
-            <h2 class="khan__author">Salman Khan</h2>
-            <p class="khan__title">The One World Schoolhouse</p>
+            <p class="khan__author">Salman Khan</p>
+            <h2 class="khan__title">The One World Schoolhouse</h2>
             <p class="khan__quote">
               Sal Khan's passion and innovation is transforming learning for
               millions of students worldwide. The One World Schoolhouse is a
@@ -273,61 +273,61 @@
           </p>
           <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">1</p>
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">
                 Choose a lovable project
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">2</p>
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
               <p class="table__text table__text_theme_dark">
                 Focus your energy on one skill at a time
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">3</p>
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
               <p class="table__text table__text_theme_dark">
                 Define your target performance level
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">4</p>
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
               <p class="table__text table__text_theme_dark">
                 Deconstruct the skill into sub-skills
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">5</p>
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">
                 Obtain critical tools
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">6</p>
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
               <p class="table__text table__text_theme_dark">
                 Eliminate barriers to practice
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">7</p>
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
               <p class="table__text table__text_theme_dark">
                 Make dedicated time for practice
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">8</p>
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
               <p class="table__text table__text_theme_dark">
                 Create fast feedback loops
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">9</p>
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
               <p class="table__text table__text_theme_dark">
                 Practice by the clock in short bursts
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <p class="table__heading table__heading_theme_dark">10</p>
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
               <p class="table__text table__text_theme_dark">
                 Emphasize quantity and speed
               </p>
